--- a/app/public/index.html
+++ b/app/public/index.html
@@ -23,9 +23,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Play [Board Game] online"
+      content="Play A Fistful of Meeples online"
     />
-    <title>[Board Game Template]</title>
+    <title>A Fistful of Meeples</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
